Fix compilation + still tests not passed
Signed-off-by: Thomas ADAM <tadam@silicom.fr>